# Petshop_project

./: README.md
backend/: .coverage  .coveragerc  .env  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  test_db_connection.py
backend/app/: __init__.py  routes.py
backend/app/entities/: address.py  appointment.py  breed.py  contact.py  database.py  pet.py  user.py
backend/app/models/: address_model.py  appointment_model.py  breed_model.py  client_model.py  contact_model.py  pet_model.py  user_model.py
backend/app/schemas/: address_schema.py  appointment_schema.py  breed_schema.py  client_schema.py  contact_schema.py  pet_schema.py  user_schema.py
backend/app/services/: address_service.py  appointment_service.py  breed_service.py  client_service.py  contact_service.py  pet_service.py  user_service.py
backend/app/views/: address_view.py  appointment_view.py  breed_view.py  client_view.py  contact_view.py  pet_view.py  user_view.py
backend/backend_app/: __init__.py  config.py  config_test.py
backend/backend_app/controller/: address_controller.py  appointment_controller.py  breed_controller.py  client_controller.py  contact_controller.py  dashboard_controller.py  forgot_password_controller.py  login_controller.py  logout_controller.py  pet_controller.py  procedure_controller.py  refresh_token_controller.py  user_controller.py  (+1 more)
backend/tests/: conftest.py  test_auth.py  test_client_register.py  test_create_complete_user.py  test_dashboard.py  test_login.py  test_user_search_own_data.py  test_users.py  test_utils.py  test_views_permissions.py
(+125 files in other folders)
