[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tiago F. Hinterholz <fh.tiago@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
flask = "^3.1.0"
flask-restful = "^0.3.10"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-jwt-extended = "^4.7.1"
flask-marshmallow = "^1.3.0"
flasgger = "^0.9.7"
python-dotenv = "^1.0.1"
marshmallow = "^3.26.1"
marshmallow-sqlalchemy = "^1.4.1"
passlib = "^1.7.4"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.39"
pyjwt = "^2.10.1"
alembic = "^1.15.1"
pytz = "^2025.1"
greenlet = "^3.1.1"
jsonschema = "^4.23.0"
werkzeug = "^3.1.3"
wheel = "^0.45.1"
flask-swagger-ui = "^4.11.1"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flask-testing = "^0.8.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "run:dev"
test = "run:test"

[pytest]
timeout = 10